--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,16 @@ body.dark-mode {
   font-family: "Black Ops One", cursive;
 }
 
+.fullscreen {
+  /* Full screen styles */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+
 .dark-mode .navbar {
   background-color: #212529 !important;
 }
@@ -49,4 +59,12 @@ body.dark-mode {
 }
 .dark-mode .clock-container .clock-date {
   color: #ffc107 !important;
+}
+.dark-mode .alarm-container {
+  background-color: #111 !important;
+  color: #fff;
+}
+.dark-mode .alarm-container .alarm-table th, .dark-mode .alarm-container td {
+  background-color: #111 !important;
+  color: #fff;
 }/*# sourceMappingURL=main.css.map */
