--- a/css/main.scss
+++ b/css/main.scss
@@ -51,6 +51,22 @@ body {
 
 }
 
+.world-time{
+    font-size: 2.8rem !important;
+    font-family: 'Black Ops One', cursive;
+
+    span {
+        font-size: 1.8rem !important;
+    }
+    
+}
+
+.world-date {
+    font-size: 1.5rem !important;
+    font-family: 'Black Ops One', cursive;
+
+}
+
 .fullscreen {
     /* Full screen styles */
     position: fixed;
@@ -80,6 +96,19 @@ body {
         }
 
     }
+
+    .card {
+        background-color: $dark-secondary;
+        .card-header{
+            color: $white;
+        }
+        .world-time{
+            color: $warning !important;
+        }
+        .world-date{
+            color: $warning !important;
+        }
+    }
     
     .alarm-container {
         background-color : $dark-secondary !important;
@@ -89,6 +118,8 @@ body {
             color: $white;
         }
     }
+
+
     
     
 
