--- a/css/main.css
+++ b/css/main.css
@@ -96,3 +96,14 @@ body.dark-mode {
 }/*# sourceMappingURL=main.css.map */
 
 
+@media only screen and (max-width: 480px) {
+  .clock-time{
+      font-size: 10vw !important;
+      span {
+          font-size: 1.8rem !important;
+      }
+}
+.clock-date {
+  font-size: 1.5rem !important;
+}
+}
