--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,32 @@ body {
     
 }
 
+
+@media only screen and (max-width: 480px) {
+    .clock-time{
+        font-size: 4rem !important;
+        span {
+            font-size: 1.8rem !important;
+        }
+  }
+  .clock-date {
+    font-size: 1.5rem !important;
+  }
+}
+  
+@media only screen and (min-width: 481px) and (max-width: 1024px) {
+    /* Styles for medium-sized screens */
+    .clock-time{
+        font-size: 4rem !important;
+        span {
+            font-size: 1.8rem !important;
+        }
+  }
+  .clock-date {
+    font-size: 1.5rem !important;
+  }
+  }
+  
 .clock-date {
     font-size: 3.5rem !important;
     font-family: 'Black Ops One', cursive;
