--- a/css/stopwatch.scss
+++ b/css/stopwatch.scss
@@ -18,10 +18,20 @@
         @content;
     }
 }
+
+@mixin fiveHundred() {
+  @media only screen and (max-width: 500px) {
+      @content;
+  }
+}
   
   .timer {
+    font-family: 'Black Ops One', cursive;
+      @include fiveHundred() {
+        font-size: 2.5vw;
+      }
       #hours, #minutes, #seconds {
-          font-size: 5em;
+          font-size: 3.5em;
       }
       #tens {
           font-size:2em;
